# configs

./: .gitignore  .gitmodules  Makefile  README.md  booststrap.fish  readme.md  readme.org
configs/: .bashrc  urxvt  xinitrc  zshrc
configs/MangoHud/: MangoHud.conf  wine-CodeVein.conf  wine-DarkSoulsIII.conf  wine-Warframe.x64.conf  wine-eldenring.conf  wine-start_protected_game.conf
configs/alacritty/: alacritty-nord.yml
configs/awesome/: rc.lua  rc.lua.polybar
configs/kitty/: kitty.conf
configs/ncmpcpp/: config  cover.sh
configs/neofetch/: config.conf
configs/nvim/: init.lua
configs/opentabletdriver/: 99-opentabletdriver.rules  i405x.json
configs/picom/: picom.conf
configs/polybar/: config.ini
configs/scripts/: autostart.sh  cpu.sh  mouse.sh  (+4 more)
configs/xmonad/: build  install.sh  log.txt  package.yaml  stack.yaml  tutorial  xmonad-scherso.cabal  xmonad.hs  zmonad.cabal
configs/xmonad/icons/: floating.xpm  full.xpm  mirrortiled.xpm  tiled.xpm
configs/xmonad/scripts/: mpd.sh  volume.sh
configs/xmonad/src/: 2ndmonitor.hs  jabuxa.hs  jabuxa1.hs  main-2.hs  main.hs  melange1.hs  original.hs  solarized1.hs  xfce-xmonad.hs  xmobar.hs  xmobar2.hs  xmonad.hs
desktop/: readme.md
gentoo-related/: 5.18.16-zen1-kernel-config  fstab  kernel.sh  make.conf  package.accept_keywords  package.env  package.use  world-set
host-ciga/: Makefile  readme.org
host-fedora/: Makefile  readme.org
host-final/: Makefile  readme.org
kitty/: kitty.conf  undefined.conf
scripts/: kvm.sh  volume_brightness.sh  way-print.sh  x-print.sh
work-laptop/: readme.md
(+555 files in other folders)
