-- heavily copied from github.com/scherso, all rights to him
cabal-version: 1.12

name:           zmonad
version:        0.1.0
synopsis:       xmonad but z
homepage:       https://github.com/jabuxas/config-notes
author:         jabuxas
maintainer:     jabuxas
license:        BSD4
build-type:     Simple

executable xmobar
  main-is: xmobar.hs
  other-modules:
      Paths_zmonad
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base
    , xmobar
    , xmonad-contrib >=0.16
  default-language: Haskell2010

executable xmobar2
  main-is: xmobar2.hs
  other-modules:
      Paths_zmonad
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base
    , xmobar
    , xmonad-contrib >=0.16
  default-language: Haskell2010

executable xmonad
  main-is: main.hs
  other-modules:
      Paths_zmonad
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2 -j -dynamic
  build-depends:
      X11 >=1.10
    , base
    , containers
    , xmonad
    , xmonad-contrib >=0.16
  default-language: Haskell2010
